MacViews: Don't tile theme overlay image

Bug: 827604
Change-Id: I67b0478de52e7f5bf4bd659afc5b305407072ee3
Reviewed-on: https://chromium-review.googlesource.com/1015514
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551688}
Former-commit-id: 289ea282e986808f3698a7d3f92296fa04a40a41